# sdlsh

./: CMakeLists.txt  default.nix
build-tools/: CMakeLists.txt  adapter-generator  opcode-generator  protocol.h
src/: CMakeLists.txt  sdl-runner.c
